fix safari overflow issue

--- a/src/components/store/music/MusicItem.module.scss
+++ b/src/components/store/music/MusicItem.module.scss
@@ -19,6 +19,7 @@ a {
 			& img {
 				object-fit: cover;
 				max-width: 100%;
+				height:100%;
 				max-height:100%;
 			}
 		}
